HomePage Resp[onsiveness

--- a/app/globals.css
+++ b/app/globals.css
@@ -15,3 +15,10 @@ html,
   /* margin: 0 !important; */
   margin: -5px 0 !important;
 }
+
+.overflowed-product-images::-webkit-scrollbar{
+  width: 5px;
+}
+.overflowed-product-images::-webkit-scrollbar-thumb{
+  background: gray;
+}
